force-app/main/default/objects/User/fields/Krow__Krow_User__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Klient User?</label>
    <type>Checkbox</type>
</CustomField>