force-app/main/default/objects/User/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Changes users views and functions in Klient Projects ...</inlineHelpText>
    <label>Project Manager</label>
    <type>Checkbox</type>
</CustomField>