force-app/main/default/objects/User/fields/Slack_Id_Code__c.field-meta.xml
<CustomField>
    <fullName>Slack_Id_Code__c</fullName>
    <label>Slack Id Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>